@@ -199,7 +199,6 @@ ssl_cacert =
 pool = prefork
 operation_timeout = 1.0
 task_track_started = True
-task_adoption_timeout = 600
 task_publish_max_retries = 3
 worker_precheck = False
 
@@ -231,6 +230,7 @@ use_row_level_locking = True
 parsing_processes = 2
 use_job_schedule = True
 allow_trigger_in_future = False
+task_adoption_timeout = 600
 
 [kerberos]
 ccache = /tmp/airflow_krb5_ccache
