@@ -1,5 +1,10 @@
 ## Changelog
 
+## master
+
+- Update: Mesos Attribute handling.
+- Update: Airflow configuration parameter to the new version.
+
 ## v0.2.2
 
 - Fix: wrong task id output in airflow logs.
